<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scroll_id"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:scrollbars="vertical">

	<LinearLayout 
        android:id="@+id/titleLayout"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

	    <EditText
	        android:id="@+id/firstname"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:hint="@string/firstnameHint" /> 
	    
	    <EditText
	        android:id="@+id/lastname"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:hint="@string/lastnameHint" />
	    
	    <EditText
	        android:id="@+id/email"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textEmailAddress"
	        android:hint="@string/emailHint" />
	
	    <EditText
	        android:id="@+id/password"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:hint="@string/passwordHint" />
	    
	    <EditText
	        android:id="@+id/className"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:hint="@string/classNameHint" />
	 
	    <Button
	        android:id="@+id/register"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/registerText" />
	    
	</LinearLayout>
</ScrollView>